Adding User Login/Logout Service

--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -4,15 +4,19 @@
 
         <nav>
             <ul>
-                <li><a routerLink="/login">Login</a></li>
-                <li class="menu-container">
-                    <a routerLink="/dashboard">Ronak</a>
-                    <div class="menu">
+                <li>
+                    <li *ngIf="!isAuth">
+                        <a routerLink="/login">Login</a>
+                    </li>
+                    <li *ngIf="isAuth" class="menu-container">
+                        <a routerLink="/dashboard">{{user.name}}</a>
+                        <div class="menu">
                         <a routerLink="/profile">Profile</a>
-                        <a routerLink="/order">Orders</a>
-                        <a >Logout</a>
-                    </div>
-                </li>
+                        <a routerLink="/orders">Orders</a>
+                        <a (click)="logout()">Logout</a>
+                        </div>
+                    </li>
+                    <li>
                 <li>
                     <a routerLink="/cart-page">
                         Cart <span *ngIf="cartQuantity">{{cartQuantity}}</span>
